--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,8 +66,11 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px; /* Adjust the space between revealed cards */
+  max-width: 600px;
+  padding-left: 20px;
   width: auto;
-
+  margin-left: auto; /* Center the container horizontally */
+  margin-right: auto; /* Center the container horizontally */
 }
 
 .revealed-cards div {
@@ -85,7 +88,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px; /* Adjust the space between revealed cards */
-    margin-left: 20px;
+    padding-left: 20px;
  
     width: auto;
   
